Add MediaPause key to mapping

We were missing it.
BUG:403636